# model-hub

./: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
.github/workflows/: release-windows.yml
.trellis/spec/backend/: database-guidelines.md  desktop-overlay.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  model-leaderboard.md  quality-guidelines.md  upstream-access.md
.trellis/spec/frontend/: component-guidelines.md  directory-structure.md  hook-guidelines.md  index.md  model-queue-sort.md  quality-guidelines.md  state-management.md  type-safety.md
.trellis/spec/guides/: index.md
.trellis/tasks/07-17-mvp-admin-ui/: check.jsonl  design.md  implement.jsonl  implement.md  prd.md  task.json
.trellis/tasks/07-17-mvp-e2e-docs/: prd.md  task.json
.trellis/tasks/07-17-mvp-gateway-sidecar/: implement.jsonl  prd.md  task.json
.trellis/tasks/07-17-mvp-scaffold/: check.jsonl  implement.jsonl  implement.md  task.json
.trellis/tasks/07-17-octopus-sidecar-e2e/: check.jsonl  prd.md  task.json
.trellis/tasks/07-17-tauri-port-octopus/: check.jsonl  implement.jsonl  implement.md  prd.md  task.json
.trellis/tasks/07-18-channel-edit-enhance/: implement.jsonl  task.json
.trellis/tasks/07-18-chat-onboarding-selfcheck/: design.md  implement.jsonl  implement.md  task.json
.trellis/tasks/07-18-gateway-api-key-chat/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-18-group-edit-enhance/: implement.jsonl  implement.md  task.json
.trellis/tasks/07-18-logs-page-enhance/: check.jsonl  prd.md  task.json
.trellis/tasks/07-18-release-bundled-sidecar/: check.jsonl  implement.md  prd.md  task.json
.trellis/tasks/07-18-rust-native-gateway/: task.json
.trellis/tasks/07-18-setup-wizard-guide/: implement.md  task.json
.trellis/tasks/07-18-windows-tray-close/: implement.md  prd.md  task.json
.trellis/tasks/07-19-gateway-port-setting/: design.md  implement.jsonl  task.json
.trellis/tasks/07-19-in-app-updater/: check.jsonl  implement.md  task.json
.trellis/tasks/07-20-rust-gateway-http-skeleton/: implement.jsonl  prd.md  task.json
.trellis/tasks/07-21-fix-v004-prepare-script/: task.json
.trellis/tasks/07-21-gateway-autostart-port-restart/: task.json
.trellis/tasks/07-21-release-v0-0-4/: task.json
.trellis/tasks/07-21-release-v0-0-5/: task.json
.trellis/tasks/07-21-release-v0-0-6/: prd.md  task.json
.trellis/tasks/07-21-release-v0-0-7/: prd.md  task.json
.trellis/tasks/07-21-release-v0-0-8-channel-models/: task.json
changelog/: v0.0.1.md  v0.0.2.md  v0.0.3.md  v0.0.4.md
docs/: chat-onboarding.md  client-integration.md  current-architecture.md  in-app-updater.md  local-acceptance.md  mvp-acceptance.md  release-notes-v0.0.1.md  release-notes-v0.0.2.md  release-notes-v0.0.3.md  release-notes-v0.0.4.md  release-notes-v0.0.5.md  release-notes-v0.0.6.md  release-notes-v0.0.7.md  release-notes-v0.0.8.md  release-notes-v0.1.0.md  release-notes-v0.1.1.md
gateway/: README.md
gateway-rust/: Cargo.toml  README.md
gateway-rust/src/: config.rs  error.rs  http.rs  lib.rs  main.rs  response.rs  server.rs
gateway-rust/src/apikey/: mod.rs  model.rs  service.rs  sqlite_store.rs  store.rs
gateway-rust/src/auth/: admin.rs  jwt.rs  middleware.rs  mod.rs
gateway-rust/src/channel/: mod.rs  model.rs  service.rs  store.rs
gateway-rust/src/db/: migrate.rs  mod.rs
gateway-rust/src/group/: mod.rs  model.rs  service.rs  store.rs
gateway-rust/src/log/: mod.rs  model.rs  service.rs  store.rs
gateway-rust/src/migrate_octopus/: detect.rs  import.rs  mod.rs
gateway-rust/src/router/: mod.rs  round_robin.rs
gateway-rust/src/routes/: admin_user.rs  apikey.rs  channel.rs  group.rs  log.rs  mod.rs  v1_chat.rs  v1_models.rs
gateway-rust/src/upstream/: mod.rs
gateway-rust/testdata/: config.json
gateway-rust/tests/: auth_matrix.rs  channel_group_matrix.rs  chat_forward.rs  http_server.rs  log_matrix.rs
scripts/: e2e-octopus-smoke.py  fetch-octopus-windows.ps1  prepare-bundled-gateway-rust.ps1  prepare-bundled-octopus.ps1
src/: App.tsx  OverlayApp.vue  index.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json  overlay.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  overlay.rs  paths.rs  pi_export.rs  settings.rs  tray.rs
src-tauri/src/db/: migrate.rs  mod.rs
src-tauri/src/domain/: apikey.rs  group.rs  leaderboard.rs  log.rs  mod.rs  provider.rs  upstream_models.rs
src-tauri/src/gateway/: binary.rs  config.rs  health.rs  impl_kind.rs  mod.rs  process.rs  settings.rs  state.rs
src-tauri/src/proxy/: circuit.rs  forward.rs  mod.rs  runtime.rs  server.rs
src-tauri/tests/: failover_any_error.rs  proxy_failover.rs
src/api/: apikey.ts  auth.ts  channel.ts  gatewayHttp.ts  group.ts  log.ts  tauri.ts  updater.ts
src/components/: AppDialog.vue  AppShell.vue  GatewayGate.tsx  HealthBadge.vue
src/pages/: ApiKeysPage.tsx  ApiKeysPage.vue  ChannelsPage.tsx  DashboardPage.tsx  GroupsPage.tsx  GroupsPage.vue  HomePage.vue  LogsPage.tsx  LogsPage.vue  OverviewPage.vue  ProvidersPage.vue  SettingsPage.vue
src/router/: index.ts
src/utils/: groupSaveMode.test.ts  groupSaveMode.ts  health.ts  modelCapability.test.ts  modelCapability.ts  providerPaste.test.ts  providerPaste.ts  rawInstanceRef.test.ts  statusCode.ts
(+420 files in other folders)
