[package]
name = "model-hub-gateway"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Model Hub Rust 原生网关实验骨架"

[dependencies]
axum = "=0.8.4"
chrono = { version = "=0.4.41", default-features = false, features = ["clock", "std"] }
clap = { version = "=4.5.45", features = ["derive"] }
hex = "=0.4.3"
http-body-util = "=0.1.3"
jsonwebtoken = "=9.3.1"
rand = "=0.8.5"
futures-util = { version = "=0.3.31", default-features = false, features = ["std"] }
reqwest = { version = "=0.12.23", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "=0.32.1", features = ["bundled"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
sha2 = "=0.10.9"
thiserror = "=2.0.16"
tokio = { version = "=1.47.1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter"] }
tower-http = { version = "=0.6.6", features = ["cors"] }

[dev-dependencies]
tempfile = "=3.14.0"
tower = { version = "=0.5.2", features = ["util"] }
wiremock = "=0.6.5"
