[package]
name = "model-hub"
version = "0.1.0"
description = "Model Hub 桌面管理应用"
authors = ["Model Hub Contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "model_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.16"
tauri = { version = "2.8.5", features = ["tray-icon"] }
