[package]
name = "model-hub"
version = "0.0.8"
description = "Model Hub 桌面管理应用"
authors = ["Model Hub Contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "model_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.16"
tauri = { version = "=2.11.5", features = ["tray-icon"] }
tauri-plugin-updater = "=2.10.1"
tauri-plugin-process = "=2.3.1"
tauri-plugin-http = { version = "=2.5.7", features = ["unsafe-headers"] }
